mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-app/docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  #creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-app/docker-compose.yml
        kompose.version: 1.24.0 (4a2a0458)
      #creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
          image: mariadb:latest
          name: mariadb
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-claim0
      restartPolicy: Always
      volumes:
        - name: mariadb-claim0
          persistentVolumeClaim:
            claimName: mariadb-claim0
status: {}
