dp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-app/docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  #creationTimestamp: null
  labels:
    io.kompose.service: dp
  name: dp
spec:
  type: NodePort
  ports:
    - name: "8061"
      # protocol: TCP
      port: 8061
      targetPort: 80
      nodePort: 30010
  selector:
    io.kompose.service: dp
status:
  loadBalancer: {}
